# uw-pantry-lambda-rust

./: .env.example  Cargo.toml  README.md  dynamo.tf
src/: db.rs  error.rs  main.rs  schema.rs  schemar-r.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/db/: ensure_table_exists.rs  init.rs  mod.rs  temp.rs
src/db/connect/: mod.rs
src/models/: mod.rs  pantry.rs  pantry_access.rs  user.rs
src/schema/: mod.rs  mutation.rs  query.rs  types.rs
