[package]
name = "uw-alice-food-pantry-emailer-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.15"
async-graphql-axum = "7.0.15"
axum = "0.8.1"
axum-extra = "0.10.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.0", features = ["full"]}
tower-http = {version = "0.6.2", features = ["cors"]}
tracing-subscriber = {version = "0.3.19", features = ["fmt"]}
